# os-labs

caching_http_proxy/: CMakeLists.txt  proxy.c
caching_http_proxy/server/: CMakeLists.txt
caching_http_proxy/server/include/: server.h
caching_http_proxy/server/src/: main.c  server.c
compile-build-run/lab1/: hello  hello.c
compile-build-run/lab2/: hello  hello.c  hello_static_lib.c
compile-build-run/lab3/: hello  hello.c  hello_dynamic_lib.c
file_systems/lab1/: hmm  main.c
file_systems/lab2/: main.c
file_systems/lab3/: main.c
interprocess_communication/lab1/: main.c
interprocess_communication/lab2/: main.c
interprocess_communication/lab3/: CMakeLists.txt  main.c
networking/lab1/: CMakeLists.txt  hmm  main.c
networking/lab2/: CMakeLists.txt  main.c
networking/lab3/: CMakeLists.txt  main.c
process_address_space/lab1/: CMakeLists.txt  main.c
process_address_space/lab2/: CMakeLists.txt  main.c
process_address_space/lab3/: CMakeLists.txt  main.c
processes/lab1/: main.c
processes/lab2/: README.md
processes/lab3/: main.c
suid_bit/: CMakeLists.txt  main.c
synchronization/lab1/: CMakeLists.txt  queue-example.c  queue-threads.c
synchronization/lab2/: CMakeLists.txt  queue-example.c  queue-threads.c  queue.c  queue.h
synchronization/lab3/: CMakeLists.txt  list.c  list.h  main.c
synchronization/lab4/: CMakeLists.txt  main.c  mymutex.c  mymutex.h  myspinlock.c  myspinlock.h
syscalls/lab1/: hello  hello.c  hello_sys  hello_sys.c
syscalls/lab2/: hello  hello.c
syscalls/lab3/: ptrace  ptrace.c
threads/lab1/: CMakeLists.txt  main.c
(+16 files in other folders)
